RESOLVED FIXED288683
REGRESSION(291033@main): Broke visionOS layout tests
https://bugs.webkit.org/show_bug.cgi?id=288683
Summary REGRESSION(291033@main): Broke visionOS layout tests
Jonathan Bedard
Reported 2025-02-26 20:31:30 PST
First failures: https://build.webkit.org/#/builders/1255/builds/4637 Failing tests interaction-region/guard-crash.html [ Failure ] interaction-region/interaction-layers-culling-layer-type-change.html [ Failure ] interaction-region/interaction-layers-culling.html [ Failure ] interaction-region/layer-tree-shape-reset.html [ Failure ] interaction-region/layer-tree.html [ Failure ] platform/visionos/transforms/separated-image-downgrade-content.html [ Failure ] platform/visionos/transforms/separated-image-downgrade-tiled.html [ Failure ] platform/visionos/transforms/separated-image-downgrade.html [ Failure ] platform/visionos/transforms/separated-image-upgrade-tiled.html [ Failure ] platform/visionos/transforms/separated-image-upgrade.html [ Failure ] platform/visionos/transforms/separated-update.html [ Failure ] platform/visionos/transforms/separated-video.html [ Failure ] platform/visionos/transforms/separated.html [ Failure ]
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-26 20:31:51 PST
Jay Stfleur
Comment 2 2025-03-01 19:45:32 PST
adding coverage for tests that are failing
EWS
Comment 3 2025-03-01 19:53:58 PST
Test gardening commit 291467@main (e166b8039072): <https://commits.webkit.org/291467@main> Reviewed commits have been landed. Closing PR #41730 and removing active labels.
EWS
Comment 4 2025-03-03 14:59:36 PST
Committed 291526@main (e4589c40878e): <https://commits.webkit.org/291526@main> Reviewed commits have been landed. Closing PR #41794 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.