REGRESSION(291033@main): Broke visionOS layout tests rdar://145714724 https://bugs.webkit.org/show_bug.cgi?id=288683

Reviewed by Andy Estes.

Separate out the cases for HAVE(SPATIAL_TRACKING_LABEL) and HAVE(SPATIAL_AUDIO_EXPERIENCE).

* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView _commonInitializationWithProcessPool:configuration:]):

Canonical link: https://commits.webkit.org/291526@main